<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.adenlexar.v4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="fr.adenlexar.v4.ui.infos.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_nutri"
        android:name="fr.adenlexar.v4.ui.nutrition.NutriFragment"
        android:label="@string/title_nutri"
        tools:layout="@layout/fragment_nutri" />

    <fragment
        android:id="@+id/navigation_comp"
        android:name="fr.adenlexar.v4.ui.complements.CompFragment"
        android:label="@string/title_comp"
        tools:layout="@layout/fragment_comp" />

</navigation>