<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infos.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/idNameInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/info_name_input"
            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/idMaleRd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/info_sexe_male" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/info_sexe_female" />

        </RadioGroup>

        <EditText
            android:id="@+id/idAgeInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/info_age_input"
            android:inputType="number" />

        <EditText
            android:id="@+id/idHeightInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/info_height_input"
            android:inputType="number" />

        <EditText
            android:id="@+id/idWeightInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/info_weight_input"
            android:inputType="number" />

        <Spinner
            android:id="@+id/idActInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/info_activ_input"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/idObjInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:entries="@array/info_goal_input"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/idCalcButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/info_save_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>